Fix nextRuns from overflowing one line

--- a/src/graphics/nextRuns/nextRuns.css
+++ b/src/graphics/nextRuns/nextRuns.css
@@ -54,5 +54,19 @@
   align-items: center;
   justify-content: space-evenly;
 
-  font-size: 26px;
+  font-size: 24px;
+}
+
+.next-run-category {
+  max-width: 50%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.next-run-runner {
+  max-width: 50%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
